# Advent-of-Code-2024

./: CMakeLists.txt  vcpkg.json
day-1/: main.cpp
day-10/: main.cpp
day-2/: main.cpp
day-3/: main.cpp
day-4/: main.cpp
day-5/: main.cpp
day-6/: main.cpp
day-7/: main.cpp
day-8/: main.cpp
day-9/: main.cpp
include/: utilities.h
libutil/: Grid.ixx  Misc.ixx  Util.ixx
